- [Feature] Sorting files by permission
- [Feature] UTF-8 is now used as the default character encoding
- [Feature] Edit with non-default editor using the browser context menu

2.4.5
- [Feature] Added Tag to the list of supported editors (http://www.talacia.com/)
- [Bugfix] No permissions set on transferred files when connection closed unexpectedly (SFTP)

2.4.4
- [Localize] Danish Localization
- [Localize] Polish Localization
- [Feature] Added CSSEdit to the list of supported editors (http://macrabbit.com/cssedit/)
- [Feature] Added CotEditor to the list of supported editors (http://www.aynimac.com/)
- [Feature] Gray out files in browser view when disconnected
- [Bugfix] Unexpected null reply received (FTP)

2.4.3
- [Localize] Hungarian Localization
- [Bugfix] Modification date changed when uploading files from the external editor
- [Bugfix] Browser window could lock up when reconnecting and login was needed 
- [Feature] Disconnect item in menubar
- [Bugfix] Bug fixes

2.4
- [Localize] Swedish Localization
- [Feature] Additional encryption ciphers supported (SFTP)
- [Feature] Action dropdown menu in toolbar
- [Feature] Added Jedit X to the list of supported editors (http://www.artman21.net/product/JeditX/)
- [Feature] Added mi to the list of supported editors (http://mimikaki.net/)
- [Feature] Added Smultron to the list of supported editors (http://smultron.sourceforge.net/)
- [Bugfix] Rendezvous implementation updated 
- [Bugfix] Folder to synchronize not selectable in some cases
- [Bugfix] Fallback to default directory when specified directory doesn't exist
- [Bugfix] Resolved incompatibility with SSH-1 keys in ~/.ssh/known_hosts (SFTP)
- [Bugfix] Resolved crash in info window when group was unknown

2.4b4
- [Bugfix] Dragging files to the Finder
- [Bugfix] Reordering bookmarks
- [Bugfix] SSH exception handling (SFTP)
- [Bugfix] Bookmark selection in connection dialog
- [Bugfix] Items in transfer window not removed