@@ -1,2 +1,2 @@
 cyberduck.version.major=2
-cyberduck.version.minor=5b1
+cyberduck.version.minor=5b2
